--- a/CO3/implicitIntents/app/src/main/res/values/strings.xml
+++ b/CO3/implicitIntents/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ImplicitIntents</string>
+    <string name="app_name">implicitIntents</string>
 </resources>
